<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <TextView
            android:id="@+id/birdsTitle"
            style="@style/BirdTextView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:textSize="22sp"
            android:text="@string/bird_areas_pm"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/birdButtonPM"
                style="@style/GroupButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="50dp"
                android:paddingBottom="5dp"
                android:drawableTop="@drawable/purple_martin"
                android:text="@string/bird" />
            <Button
                android:id="@+id/nestButtonPM"
                style="@style/GroupButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="50dp"
                android:paddingBottom="5dp"
                android:drawableTop="@drawable/purple_martin_nest"
                android:text="@string/nest" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/eggButtonPM"
                style="@style/GroupButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:drawableTop="@drawable/purple_martin_egg"
                android:text="@string/egg"
                />
            <Button
                android:id="@+id/housingButtonPM"
                style="@style/GroupButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:drawableTop="@drawable/purple_martin_housing"
                android:text="@string/housing" />
        </LinearLayout>
        <TextView
            android:id="@+id/purpleMartinDescription"
            style="@style/BirdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/association_desc"
            android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>